# ckanext-ldap

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  dev_requirements.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump.yml  main.yml  pull-requests.yml  pypi-publish.yml  sync.yml  tests.yml
ckanext/: __init__.py
ckanext/ldap/: __init__.py  cli.py  plugin.py
ckanext/ldap/commands/: __init__.py  ldap.py
ckanext/ldap/controllers/: user.py
ckanext/ldap/lib/: __init__.py  exceptions.py  helpers.py  search.py  utils.py
ckanext/ldap/logic/: action.py  auth.py
ckanext/ldap/logic/auth/: create.py  update.py
ckanext/ldap/migration/ldap/: alembic.ini  env.py
ckanext/ldap/migration/ldap/versions/: a9d372ce374d_initialisation.py
ckanext/ldap/model/: ldap_user.py
ckanext/ldap/routes/: __init__.py  _helpers.py  login.py  user.py
ckanext/ldap/templates/user/: login.html
docker/: Dockerfile  Dockerfile_latest  Dockerfile_next  entrypoint.sh  run-tests.sh
docs/: configuration.md  index.md  installation.md  requirements.txt  tests.md
docs/_scripts/: gen_api_pages.py
docs/usage/: index.md
tests/: conftest.py  test_auth.py  test_helpers.py
tests/routes/: test_helpers.py
